--- a/views/sistema/buscarHoteles.phtml
+++ b/views/sistema/buscarHoteles.phtml
@@ -1,16 +1,8 @@
 <div id="page-content">
     <div id='wrap'>
-		<div id="page-heading">
-        
-			<!-- <ol class="breadcrumb">
-				<li><a href="index.php">Dashboard</a></li>
-				<li>UI Components</li>
-				<li class="active">Tabs &amp; Accordions</li>
-			</ol> -->
-
-                    <h1>Hoteles en SANTIAGO/CHILE</h1>
-			
-		</div>
+        <div id="page-heading">
+            <h1>Hoteles en SANTIAGO/CHILE</h1>
+        </div>
 		
         
         <div class="container">
@@ -18,7 +10,7 @@
                 
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h4>NERUDA EXPRESS - <b>Direcci&oacute;n:</b> BERNARDO O HIGGINS N° 816</h4>
+                        <h4>NERUDA EXPRESS - <b>Direcci&oacute;n:</b> BERNARDO O HIGGINS N&deg; 816</h4>
                         <div class="options">
                           <ul class="nav nav-tabs">
                             <li class="active">
@@ -221,19 +213,23 @@
                     </div>
                 </div>
                 
+                <?php if(isset($this->paginacion)){ echo $this->paginacion; }else{ ?>
                 <center>
                 <div class="tab-pane active" id="dompaginate">
                     <ul class="pagination">
-                        <li class="disabled"><a href="#">&ll;</a></li>
+                      <li class="disabled"><a href="#">&ll;</a></li>
+                      <li class="disabled"><a href="#">&lt;</a></li>
                       <li class="active"><a href="#">1</a></li>
                       <li><a href="#">2</a></li>
                       <li><a href="#">3</a></li>
                       <li><a href="#">4</a></li>
                       <li><a href="#">5</a></li>
+                      <li><a href="#">&gt;</a></li>
                       <li><a href="#">&gg;</a></li>
                     </ul>
                 </div>
                 </center>
+                <?php } ?>
 
             </div>
         </div> <!-- container -->
