--- a/views/sistema/buscarHoteles.phtml
+++ b/views/sistema/buscarHoteles.phtml
@@ -11,26 +11,28 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading" >
                         
-                            <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
-                            <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
-                            <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
-                            <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
-                            <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style=" width: 20px; margin-top: -5px;">
-                             - NERUDA EXPRESS
-                        
+                        <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
+                        <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
+                        <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
+                        <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style="width: 20px; margin-top: -5px;">
+                        <img src="<?php echo $_layoutParams['ruta_img']; ?>star_on.png" style=" width: 20px; margin-top: -5px;">
+
+                        - NERUDA EXPRESS
+
                         <div class="options">
-                          <ul class="nav nav-tabs">
-                            <li class="active">
-                              <a href="#home1" data-toggle="tab">Tarifas</a>
-                            </li>
-                            <li>
-                                <a href="#profile1" data-toggle="tab">Ficha T&eacute;cnica</a>
-                            </li>
-                            <li>
-                              <a href="#messages1" data-toggle="tab">Mapa</a>
-                            </li>
-                          </ul>
+                            <ul class="nav nav-tabs">
+                                <li class="active">
+                                    <a href="#home1" data-toggle="tab">Tarifas</a>
+                                </li>
+                                <li>
+                                    <a href="#profile1" data-toggle="tab">Ficha T&eacute;cnica</a>
+                                </li>
+                                <li>
+                                    <a href="#messages1" data-toggle="tab">Mapa</a>
+                                </li>
+                            </ul>
                         </div>
+                        
                     </div>
                     <div class="panel-body">
                         <div class="tab-content">
@@ -49,16 +51,17 @@
                                         <tr>
                                             <td valign="top">
                                                 <!-- <hr> -->
-                                                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped" style="width: 72%; margin-left: 58px; margin-top: 10px; font-size:12px"> <!-- class="table table-striped table-bordered" -->
-                                                    <tr>
-                                                        <tr>
-                                                            <th role="columnheader" style="padding-left: 2px;">Tipo Habitaci&oacute;n</th>
-                                                            <th role="columnheader" style="padding-left: 2px;">Plan alimenticio</th>
-                                                            <th role="columnheader" style="padding-left: 2px;">Precio estadia</th>
-                                                            <th role="columnheader" style="padding-left: 2px;">Status</th>
-                                                        </tr>
+                                                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width: 65%; margin-left: 58px; margin-top: 10px; font-size:12px"> <!-- class="table table-striped table-bordered" -->
+                                                    
+                                                    <thead>
+                                                    <tr style="background-color:#34495e; color: #FFFFFF" role="row">
+                                                        <th role="columnheader" style="padding-left: 2px;">Tipo Habitaci&oacute;n</th>
+                                                        <th role="columnheader" style="padding-left: 2px;">Plan alimenticio</th>
+                                                        <th role="columnheader" style="padding-left: 2px; width: 100px;">Precio estadia</th>
+                                                        <th role="columnheader" style="padding-left: 2px; width: 100px;">Status</th>
                                                     </tr>
-                                                    <tr>
+                                                    </thead>
+                                                    <tr class="colorText">
                                                         <td style="padding: 2px; vertical-align: middle;">STANDARD</td>
                                                         <td style="padding: 2px; vertical-align: middle;">D.BUFFET</td>
                                                         <td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">USD 228,70</td>
@@ -66,7 +69,7 @@
                                                             <a href="#" class="btn btn-success btn-sm" style="width: 88px;">AVAILABLE</a>
                                                         </td>
                                                     </tr>
-                                                    <tr>
+                                                    <tr class="colorText">
                                                         <td style="padding: 2px; vertical-align: middle;">SUPERIOR</td>
                                                         <td style="padding: 2px; vertical-align: middle;">D.BUFFET</td>
                                                         <td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">USD 228,70</td>
@@ -74,7 +77,7 @@
                                                             <a href="#" class="btn btn-success btn-sm">ON REQUEST</a>
                                                         </td>
                                                     </tr>
-                                                    <tr>
+                                                    <tr class="colorText">
                                                         <td style="padding: 2px; vertical-align: middle;">STANDARD</td>
                                                         <td style="padding: 2px; vertical-align: middle;">D.BUFFET</td>
                                                         <td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">USD 228,70</td>
