--- a/views/sistema/hoteles.phtml
+++ b/views/sistema/hoteles.phtml
@@ -203,7 +203,7 @@
                                            <td><?php echo $h_ciudadH; ?></td>
                                            <td><?php echo $h_catH; ?></td>
                                            <td align="center">
-                                           <a data-toggle="modal" href="#myModal" onClick="abrePopupHotel('editHotel.php', 'Editar Hotel', '<?php echo $h_codigoHotel; ?>');">
+                                           <a data-toggle="modal" href="#myModal" onClick="abrePopupHotel('/oristravel.com/sistema/editHotel', 'Editar Hotel', '<?php echo $h_codigoHotel; ?>');">
                                            <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
                                            </a></td>
                                            <td align="center">
@@ -288,7 +288,7 @@ $('#btnHoteles').on('click',function()
 function abrePopupHotel(docPHP, titulo, codHotel)
 {
     $("#divPopupH").html('');
-    document.getElementById("tituloForm").innerHTML=titulo;
+    $("#tituloForm").html(titulo);
     $.post(docPHP, 
     {
         post_open: 'on',
