--- a/views/sistema/anularBooking.phtml
+++ b/views/sistema/anularBooking.phtml
@@ -48,7 +48,7 @@ $(function()
 				<li class="active">Tabs &amp; Accordions</li>
 			</ol> -->
 
-			<h1>Consultar Booking</h1>
+			<h1>Anular Booking</h1>
 		</div>
 		
         
