Comenzando a utilizar listas de acceso

--- a/views/login/login.phtml
+++ b/views/login/login.phtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title><?php if(isset($this->titulo))echo $this->titulo; ?></title>
+    <meta charset="<?php echo CHARSET; ?>">
+    <title><?php if(isset($this->titulo)){ echo $this->titulo; } ?></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Avant">
@@ -16,43 +16,51 @@
 </head>
 <body class="focusedform">
 
-<div class="verticalcenter">
-	<!-- <center><img src="<?php echo $_layoutParams['ruta_img']; ?>empresa.jpg" width="198" alt="Logo" style="margin-top:-50px" /></center> -->
-	<div class="panel panel-primary" style="margin-top:50px" >
-    <form action="<?php echo BASE_URL . 'login/ingresar'; ?>" method="post" class="form-horizontal">
-		<div class="panel-body">
-			<h4 class="text-center" style="margin-bottom: 25px;">Inicio de sesi&oacute;n</h4>
-                                <div class="form-group">
-                                        <div class="col-sm-12">
-                                                <div class="input-group">
-                                                        <span class="input-group-addon"><img src="<?php echo $_layoutParams['ruta_img']; ?>user.png" width="16"></span>
-                                                        <input type="text" class="form-control" id="username" name="txtUser" placeholder="Nombre de usuario" value="<?php echo $_SESSION["sess_usuario"]; ?>">
-                                                </div>
-                                        </div>
-                                </div>
-                                <div class="form-group">
-                                        <div class="col-sm-12">
-                                                <div class="input-group">
-                                                        <span class="input-group-addon"><img src="<?php echo $_layoutParams['ruta_img']; ?>closed.png" width="16"></span>
-                                                        <input type="password" class="form-control" id="password" name="txtPass" placeholder="Password">
-                                                </div>
-                                        </div>
-                                </div>
-						<!-- <div class="clearfix">
-							<div class="pull-right"><label><input type="checkbox" style="margin-bottom: 20px" checked=""> Remember Me</label></div>
-						</div> -->
-		</div>
-		<div class="panel-footer">
-			<a href="extras-forgotpassword.php" class="pull-left btn btn-link" style="padding-left:0">&iquest;Olvido su contrase&ntilde;a?</a>
-			
-			<div class="pull-right">
-				<a href="#" class="btn btn-default">Limpiar</a>
-                <input type="submit" id="btnEntrar" class="btn btn-primary" value="Entrar">
-			</div>
-		</div>
-    </form>
-	</div>
- </div>
+    <div class="verticalcenter">
+        <!-- <center><img src="<?php echo $_layoutParams['ruta_img']; ?>empresa.jpg" width="198" alt="Logo" style="margin-top:-50px" /></center> -->
+        <div class="panel panel-primary" style="margin-top:50px" >
+            <form action="<?php echo BASE_URL . 'login/ingresar'; ?>" method="post" class="form-horizontal">
+                <div class="panel-body">
+                    <h4 class="text-center" style="margin-bottom: 25px;">Inicio de sesi&oacute;n</h4>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <div class="input-group">
+                                <span class="input-group-addon"><img src="<?php echo $_layoutParams['ruta_img']; ?>user.png" width="16"></span>
+                                <input type="text" class="form-control" id="username" name="txtUser" placeholder="Nombre de usuario" value="<?php if (Session::get('sess_usuario')) { echo Session::get('sess_usuario'); } ?>">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <div class="input-group">
+                                <span class="input-group-addon"><img src="<?php echo $_layoutParams['ruta_img']; ?>closed.png" width="16"></span>
+                                <input type="password" class="form-control" id="password" name="txtPass" placeholder="Password">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clearfix">
+                        <?php if (Session::get('sess_alerts') == 1) { ?>
+                            <div class="alert alert-success" role="alert">
+                                <strong>La informaci&oacute; fue modificada con &eacute;xito. </strong>
+                            </div>
+                        <?php } else if (Session::get('sess_alerts') == 2) { ?>
+                            <div class="alert alert-danger" role="alert">
+                                <strong>Atenci&oacute;n!</strong>, <?php echo Session::get('sess_alerts_msg'); ?>
+                            </div>
+                        <?php } ?>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <a href="extras-forgotpassword.php" class="pull-left btn btn-link" style="padding-left:0">&iquest;Olvido su contrase&ntilde;a?</a>
+
+                    <div class="pull-right">
+                        <a href="#" class="btn btn-default">Limpiar</a>
+                        <input type="submit" id="btnEntrar" class="btn btn-primary" value="Entrar">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
       
 </body>
 </html>
